--- a/premium.css
+++ b/premium.css
@@ -568,3 +568,7 @@
     font-size: 1.1rem;
     color: #111;
 }
+
+.about-massive-hero {
+    padding-top: 145px;
+}
